--- a/styles/section.css
+++ b/styles/section.css
@@ -98,8 +98,7 @@ section{
 
 .features .box-container .box img{
     margin: 1rem 0;
-    width: 30rem;
-    height: 30rem;
+    width: 20rem;
     height: 15rem;
 }
 
@@ -115,9 +114,32 @@ section{
     color: var(--light-color);
     padding: 1rem 0;
 }
-
+.feature_text{
+    font-size: 2rem;
+    color: var(--black);
+    line-height: 1.8;
+    font-weight: 600;
+    text-align: center;
+}
+.add_to_cart-btn{
+    margin-top: 1rem;
+    display: block;
+    padding: 0.8rem 3rem;
+    font-size: 1.7rem;
+    border-radius: 0.5rem;
+    border: 0.2rem solid var(--black);
+    color: var(--black);
+    margin: auto;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+.add_to_cart-btn:hover {
+    background: var(--orange);
+    color: #fff;
+  }
 .products .product-slider{
     padding: 1rem;
+    display: flex;
 }
 
 .products .product-slider:first-child{
